tests/ui/parser/break_outside_loop.sol
function f() {
    break; //~^ERROR: `break` outside of a loop
}
